--- a/hmtl.html
+++ b/hmtl.html
@@ -5,6 +5,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Recipes</title>
 
+<!--FONTS-->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Playfair+Display:ital,wght@0,400;0,500;0,900;1,500&display=swap" rel="stylesheet">
+
 <!--LINK TO CSS FILE-->
 <link rel="stylesheet" type="text/css" href="/Users/milli/Documents/GitHub/landingpage/css.css">
 
@@ -16,8 +21,7 @@
 <div class="navbar">
 	<a class="logo" href="#home">Logo</a>
 <div>
-	<a class="about" href="#about">About</a>
-	
+	<input type="text" placeholder="Are you hungry?">
 </div>
 	
 </div>
